# jupyter_kernel_test

./: .flake8  .git-blame-ignore-revs  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  COPYING.md  MANIFEST.in  README.rst  environment.yml  flit.ini  ipython3.toml  ipython3.yaml  pyproject.toml  setup.cfg  setup_julia.sh  test_ijulia.py  test_ipykernel.py  test_ipython.py  test_irkernel.py  test_julia.py  test_kernels.py  test_xeus_cling.py  test_xues_cling.py
.github/: dependabot.yml
.github/workflows/: check-release.yml  tests.yml
jupyter_kernel_test/: __init__.py  kerneltest.py  messagespec.py  messagespec_common.py  msgspec_v5.py
kerneltest/: __init__.py  kerneltest.py  messagespec.py  messagespec_common.py
