[build-system]
requires = ["hatchling >=1.5"]
build-backend = "hatchling.build"

[project]
name = "jupyter_kernel_test"
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing"
]
requires-python = ">=3.8"
dependencies = [
  "jupyter_client >=6.1.13",
  "jsonschema"
]
dynamic = ["description", "version"]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.urls]
Homepage = "https://github.com/jupyter/jupyter_kernel_test"

[project.optional-dependencies]
test = [
  "ipykernel",
  "pre-commit"
]

[tool.hatch.version]
path = "jupyter_kernel_test/__init__.py"

[tool.hatch.envs.test]
features = ["test"]
[tool.hatch.envs.test.scripts]
test = "python -m unittest -v {args}"

[tool.hatch.envs.typing]
features = [ "test"]
dependencies = ["mypy>=1.5.1"]
[tool.hatch.envs.typing.scripts]
test = "mypy --install-types --non-interactive {args}"

[tool.hatch.envs.lint]
dependencies = [
  "mdformat>0.7",
  "mdformat-gfm>=0.3.5",
  "ruff==0.1.3"
]
detached = true
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "ruff format {args:.}",
  "mdformat --check {args:*.md}"
]
fmt = [
  "ruff --fix {args:.}",
  "ruff format {args:.}",
  "mdformat {args:*.md}"
]

[tool.mypy]
files = "jupyter_kernel_test"
python_version = "3.8"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
  "A", "B", "C", "DTZ", "E", "EM", "F", "I", "ICN", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
  "W", "YTT",
]
ignore = [
  # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF012",
  # S101 Use of `assert` detected
  "S101",
]
unfixable = [
  # Don't touch print statements
  "T201",
  # Don't touch noqa lines
  "RUF100",
]

[tool.repo-review]
ignore = ["PY004", "PY007","PP301", "PP308", "GH102", "PC140", "RTD100"]
