[metadata]
name = jupyter_kernel_test
version = attr: jupyter_kernel_test.__init__.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
home_page = https://github.com/jupyter/jupyter_kernel_test
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
include_package_data = True
py_modules = jupyter_kernel_test
python_requires = >=3.6
install_requires =
    jupyter_client
    jsonschema
[options.extras_require]
test =
    ipykernel
