[metadata]
name = jupyter_kernel_test
version = attr: jupyter_kernel_test.__init__.__version__
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
home_page = https://github.com/jupyter/jupyter_kernel_test
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    jupyter_client >=6.1.13
    jsonschema
[options.extras_require]
test =
    ipykernel
    pre-commit

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    test_*.py: B011, F841
